# WsprEncoded

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Makefile  README.adoc  README.md  WSPR.h  WSPRMessage.h  WSPRMessageU4B.h  build.sh  cppcheck.cmake  library.properties  mkdocs.yml  run.sh  runCppcheck.sh  runTests.sh  test.cpp  tests.sh
.github/workflows/: check-arduino.yml  compile-examples.yml
examples/WsprEncodedTest/: WsprEncodedTest.ino
site/: 404.html  index.html  sitemap.xml
src/: CMakeLists.txt  TestOldChannelDetails.cpp  TestWSPRMessageU4B.cpp  WSPR.h  WSPRMessageU4B.h  WSPRMessageU4BDecoder.h  WsprChannelMap.h  WsprEncoded.h  WsprEncodedDynamic.h  WsprMessageRegularType1.h  WsprMessageTelemetryBasic.h  WsprMessageTelemetryCommon.h  WsprMessageTelemetryExtendedCommon.h  WsprMessageTelemetryExtendedCommonDynamic.h  WsprMessageTelemetryExtendedGpsTelemetry.h  WsprMessageTelemetryExtendedGpsTelemetryBase.h  WsprMessageTelemetryExtendedGpsTelemetryDynamic.h  WsprMessageTelemetryExtendedTrackerTelemetry.h  WsprMessageTelemetryExtendedTrackerTelemetryBase.h  WsprMessageTelemetryExtendedTrackerTelemetryDynamic.h  WsprMessageTelemetryExtendedUserDefined.h  WsprMessageTelemetryExtendedUserDefinedBase.h  WsprMessageTelemetryExtendedUserDefinedDynamic.h  WsprMessageTelemetryExtendedVendorDefined.h  WsprMessageTelemetryExtendedVendorDefinedBase.h  WsprMessageTelemetryExtendedVendorDefinedDynamic.h  WsprUtl.h
src/new/: CMakeLists.txt  TestUtl.h  TestWspr.cpp  TestWsprChannelMap.cpp  TestWsprEncoded.cpp  TestWsprMessageRegularType1.cpp  TestWsprMessageTelemetryBasic.cpp  TestWsprUtl.cpp  Wspr.h  WsprChannelMap.h  WsprEncoded.h  WsprMessageRegularType1.h  WsprMessageTelemetryBasic.h  WsprUtl.h
src/test/: CMakeLists.txt
src/test/app/: CMakeLists.txt  TestAppChannelMapSimple.cpp  TestAppDecodeSimple.cpp
src/test/lang/: CMakeLists.txt  TestLang.cpp
src/test/unit/: CMakeLists.txt  TestWSPRMessageU4B.cpp  TestWspr.cpp  TestWsprChannelMap.cpp  TestWsprMessageRegularType1.cpp  TestWsprMessageTelemetryBasic.cpp  TestWsprMessageTelemetryCommon.cpp  TestWsprUtl.cpp
test/: CMakeLists.txt
test/app/: CMakeLists.txt  TestAppChannelMap.cpp  TestAppDecode.cpp  TestAppDecodeUserDefinedSimple.cpp  TestAppDecodeVendorDefinedSimple.cpp  TestAppEncode.cpp  TestAppEncodeSimple.cpp  TestAppEncodeUserDefinedSimple.cpp  TestAppEncodeVendorDefinedSimple.cpp  TestAppSizeUserDefined.cpp
test/lang/: CMakeLists.txt  TestLangDynamic.cpp
test/unit/: CMakeLists.txt  TestWspr.cpp  TestWsprChannelMap.cpp  TestWsprMessageRegularType1.cpp  TestWsprMessageTelemetryBasic.cpp  TestWsprMessageTelemetryExtendedCommon.cpp  TestWsprMessageTelemetryExtendedCommonDynamic.cpp  TestWsprMessageTelemetryExtendedGpsTelemetry.cpp  TestWsprMessageTelemetryExtendedGpsTelemetryDynamic.cpp  TestWsprMessageTelemetryExtendedTrackerTelemetry.cpp  TestWsprMessageTelemetryExtendedTrackerTelemetryDynamic.cpp  TestWsprMessageTelemetryExtendedUserDefined.cpp  TestWsprMessageTelemetryExtendedUserDefinedDynamic.cpp  TestWsprMessageTelemetryExtendedVendorDefined.cpp  TestWsprMessageTelemetryExtendedVendorDefinedDynamic.cpp  TestWsprUtl.cpp
tools/: FieldDefs.json  GenerateExtendedTelemetryCodecs.py  MyMessageType.json
