add_executable(TestWSPRMessageU4B TestWSPRMessageU4B.cpp)
target_include_directories(TestWSPRMessageU4B PUBLIC .)
target_compile_features(TestWSPRMessageU4B PRIVATE cxx_std_20)

add_subdirectory(new)

add_executable(TestOldChannelDetails TestOldChannelDetails.cpp)
target_include_directories(TestOldChannelDetails PRIVATE .)
add_test(NAME TestOldChannelDetails COMMAND TestOldChannelDetails)
target_compile_features(TestOldChannelDetails PRIVATE cxx_std_20)
