add_executable(TestWsprEncoded TestWsprEncoded.cpp)
target_include_directories(TestWsprEncoded PRIVATE .)

add_executable(TestWspr TestWspr.cpp)
target_include_directories(TestWspr PRIVATE .)
add_test(NAME TestWspr COMMAND TestWspr)
target_compile_features(TestWspr PRIVATE cxx_std_20)

add_executable(TestWsprChannelMap TestWsprChannelMap.cpp)
target_include_directories(TestWsprChannelMap PRIVATE .)
add_test(NAME TestWsprChannelMap COMMAND TestWsprChannelMap)
target_compile_features(TestWsprChannelMap PRIVATE cxx_std_20)

add_executable(TestWsprMessageRegularType1 TestWsprMessageRegularType1.cpp)
target_include_directories(TestWsprMessageRegularType1 PRIVATE .)
add_test(NAME TestWsprMessageRegularType1 COMMAND TestWsprMessageRegularType1)
target_compile_features(TestWsprMessageRegularType1 PRIVATE cxx_std_20)

add_executable(TestWsprMessageTelemetryBasic TestWsprMessageTelemetryBasic.cpp)
target_include_directories(TestWsprMessageTelemetryBasic PRIVATE .)
add_test(NAME TestWsprMessageTelemetryBasic COMMAND TestWsprMessageTelemetryBasic)

add_executable(TestWsprUtl TestWsprUtl.cpp)
target_include_directories(TestWsprUtl PRIVATE .)
add_test(NAME TestWsprUtl COMMAND TestWsprUtl)
target_compile_features(TestWsprUtl PRIVATE cxx_std_20)

